syntax = "proto3";

package identity;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service IUserService {
  rpc getById(GetUserByIdDTO) returns (UserDTO);
  rpc create(CreateUserDTO) returns (UserDTO);
  rpc update(UpdateUserDTO) returns (UserDTO);
  rpc delete(DeleteUserDTO) returns (google.protobuf.Empty);
  rpc list(PaginationOptions) returns (stream UserDTO);
}

message UserDTO {
  string id = 1;
  string name = 2;
  string email = 3;
  repeated string roles = 4;
}


message PaginationOptions {
  string cursor = 1;
  int32 limit = 2;
}

message GetUserByIdDTO {
  string id = 1;
}

message CreateUserDTO {
  string name = 1;
  string email = 2;
  repeated string roles = 3;
}

message UpdateUserDTO {
  string id = 1;
  string name = 2;
  string email = 3;
  repeated string roles = 4;
}

message DeleteUserDTO {
  string id = 1;
}